tests/invalidTest/other/global_no_constant.q
# EXPECT the value of global variable must be constant
sint64 a = 4
sint64 b = a